--- a/Styles/style.css
+++ b/Styles/style.css
@@ -9,6 +9,7 @@ body {
   font-family: "Inter", sans-serif;
   max-width: 1440px;
   margin: 0 auto;
+  background: rgb(245, 248, 255);
 }
 
 /* Shared Styles */
@@ -22,6 +23,8 @@ body {
   color: rgb(255, 255, 255);
   font-weight: 600;
   border: none;
+  padding: 16px 20px;
+  width: 100%;
 }
 
 .common-color {
@@ -86,6 +89,39 @@ header nav {
   width: 100%;
 }
 
+/* Plants Section Styles */
+.plants {
+  margin: 50px auto;
+}
+.plants-info {
+  text-align: center;
+  padding: 60px 0;
+}
+.plants-info h1 {
+  font-family: "Noto Serif , serif";
+  font-size: 3rem;
+  font-weight: 700;
+  padding-bottom: 20px;
+}
+.plants-card-container {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+}
+.plants-card {
+}
+.plants-card h3 {
+  text-align: center;
+  margin-top: 10px;
+  color: rgb(17, 17, 17);
+  font-size: 1.33rem;
+  font-weight: 600;
+}
+#price {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
 /* RESPONSIVE CSS FOR MOBILE */
 @media screen and (max-width: 576px) {
   /* Header Styles Start */
@@ -120,6 +156,25 @@ header nav {
     font-size: 1rem;
   }
   .banner-img {
+    width: 100%;
+  }
+  /* Plants Section Styles */
+  .plants {
+    margin-top: -70px;
+    padding: 30px;
+  }
+  .plants-info h1 {
+    font-size: 3rem;
+  }
+  .plants-info p {
+    font-size: 1rem;
+  }
+  .plants-card-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  .plants-card img {
     width: 100%;
   }
 }
