--- a/Styles/style.css
+++ b/Styles/style.css
@@ -177,6 +177,128 @@ header nav {
   width: 30%;
 }
 
+/* Deals Section styles */
+
+.deals-section {
+  max-width: 1100px;
+  margin: 40px auto;
+  padding: 0 15px;
+  text-align: center;
+}
+.deals-info {
+  text-align: center;
+}
+
+.deals-info h2 {
+  font-size: 3.2rem;
+  margin-bottom: 10px;
+}
+.deals-info p {
+  padding-bottom: 30px;
+}
+
+.deals-section h2 span {
+  color: #ff5722;
+  font-weight: bold;
+}
+
+.deals-img-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.left-imgs {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* 🔥 Card common design */
+.img-design {
+  position: relative;
+
+  height: 150px;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-end;
+}
+.deal-card.large {
+  height: 320px;
+}
+
+.left-img-1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../images/deal-bloom.png");
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  width: 100%;
+  height: 200px;
+}
+.left-img-2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../images/deal-ana.png");
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  width: 100%;
+  height: 200px;
+}
+.right-img {
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../images/deal-zabo.png");
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  width: 100%;
+}
+
+.right-img-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10px;
+}
+.right-img-text h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  font-family: "Noto Serif, serif";
+  color: rgb(255, 255, 255);
+}
+.right-img-text a {
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+  font-size: 1.3rem;
+  text-align: left;
+  text-decoration: underline;
+}
+
+.img-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 10px;
+}
+.img-text h3 {
+  color: rgb(255, 255, 255);
+  font-family: "Noto Serif, serif";
+  font-size: 1.25rem;
+  font-weight: 700;
+  text-align: center;
+}
+.img-text a {
+  color: rgb(255, 255, 255);
+  font-weight: 600;
+  text-align: left;
+  text-decoration: underline;
+}
+
 /* Colorful Branch */
 .colorful-branch {
   background-image: url("../images/news-letter-bg.png");
